Attempt to correct wrong font-size for course section on mobiles.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -684,6 +684,7 @@
       }
 
       #courses .course-list .course-block .text p{
+        font-size: 1rem;
         margin-bottom: 0.5rem;
         color: var(--dark);
       }
@@ -757,6 +758,7 @@
         }
 
         #courses .course-list .course-block .text p{
+          font-size: 1rem;
           width: 65%;
           margin: 0;
           padding: 0;
